--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
-numpy
-pandas
-matplotlib
+# Core Frameworks
+flask==3.0.3
+tensorflow==2.15.0
+torch==2.10.0
+
+# NLP & Model Loading
+transformers[tf]==4.45.0
+datasets==3.1.0
+
+# Scientific Computing
+numpy==2.4.2
+pandas==2.2.3
+
+# Utilities
 scikit-learn
-tensorflow
-transformers
-datasets
+matplotlib
+tqdm
